--- a/app/templates/drafts.html
+++ b/app/templates/drafts.html
@@ -5,29 +5,37 @@
 {% block page_title %}我的草稿{% endblock %}
 
 {% block page_content %}
-<div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        {% if blogs %}
-        {% for blog in blogs %}
-        <h2 class="blog-title">
-            <a href="{{ url_for('main.edit_blog', id=blog.id, type='create') }}" target="_blank">{{ blog.title}}</a>
-        </h2>
-        {% include "_labels.html" %}
-        <div class="blog-date">最后编辑日期 {{ moment(blog.edit_date).format('YYYY年MM月DD日 HH:mm:ss') }}</div>
-        <p class="blog-summary">
-            {{ blog.summary }}
-        </p>
-        <hr>
-        {% endfor %}
-        {% if pagination %}
-        <div class="pagination-index">
-            {{ macros.pagination_widget(pagination, 'main.index') }}
+<div class="col-md-8 col-md-offset-2">
+    {% if blogs %}
+    {% for blog in blogs %}
+    <h2 class="blog-title">
+        <a href="{{ url_for('main.edit_blog', id=blog.id, type='create') }}" target="_blank">{{ blog.title}}</a>
+    </h2>
+    <div class="row">
+        <div class="col-md-10">
+            {% include "_labels.html" %}
+            <div class="blog-date">最后编辑日期 {{ moment(blog.edit_date).format('YYYY年MM月DD日 HH:mm:ss') }}</div>
         </div>
-        {% endif %}
-        {% else %}
-        <h3>还没有草稿哦<a href="{{ url_for('main.index') }}">点我返回主页</a></h3>
-        {% endif %}
+
+        <div class="col-md-2 text-right">
+            <a class="btn btn-danger blog-edit-btn"
+               href="{{ url_for('manage.delete_blog', id=blog.id) }}" role="button">删除</a>
+        </div>
     </div>
+
+    <p class="blog-summary">
+        {{ blog.summary }}
+    </p>
+    <hr>
+    {% endfor %}
+    {% if pagination %}
+    <div class="pagination-index">
+        {{ macros.pagination_widget(pagination, 'main.index') }}
+    </div>
+    {% endif %}
+    {% else %}
+    <h3>还没有草稿哦<a href="{{ url_for('main.index') }}">点我返回主页</a></h3>
+    {% endif %}
 </div>
 
 {% endblock %}
