--- a/app/templates/markdown_editor.html
+++ b/app/templates/markdown_editor.html
@@ -15,12 +15,12 @@
         {{ form.hidden_tag() }}
         <div class="row height-full">
             <div class="col-md-6 markdown-panel">
-                <div class="row" style="height: 40px">
+                <div class="row">
                     <div class="col-md-10">
                         {{ form.title(id="title", class="editor-blog-title", placeholder=form.title.label.text) }}
                     </div>
                     <div class="col-md-2">
-                        <div class="pull-right" style="margin-top: 3px">
+                        <div class="pull-right" style="margin-top: 4px">
                             {{ form.publish(class="btn btn-info") }}
                             {% if type=="create" %}
                             {{ form.save(class="btn btn-success") }}
@@ -33,7 +33,7 @@
                 </div>
 
                 <div>
-                    {{ form.summary(class="editor-blog-area", placeholder=form.summary.label.text, rows=4) }}
+                    {{ form.summary(class="editor-blog-area", placeholder=form.summary.label.text, rows=3) }}
                 </div>
                 <div hidden>
                     {{ form.content(id="content") }}
