--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,10 +21,13 @@
                         <li><a href="{{ url_for('manage.my_favourites') }}">喜欢的文章</a></li>
                         {% if current_user.is_administrator() %}
                         <li><a href="{{ url_for('main.drafts') }}">草稿</a></li>
-                        <li><a href="{{ url_for('manage.manage_users') }}">用户管理</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{{ url_for('manage.manage_users') }}">用户权限管理</a></li>
                         <li><a href="{{ url_for('manage.manage_comments') }}">评论管理</a></li>
                         {% endif %}
+                        <li role="separator" class="divider"></li>
                         <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人信息</a></li>
+                        <li role="separator" class="divider"></li>
                         <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">退出登录</a></li>
                     </ul>
