--- a/app/templates/common_base.html
+++ b/app/templates/common_base.html
@@ -4,8 +4,8 @@
 
 {% block head %}
     {{ super() }}
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"/>
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"/>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='niceblog.ico') }}" type="image/x-icon"/>
+    <link rel="icon" href="{{ url_for('static', filename='niceblog.ico') }}" type="image/x-icon"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='my_style.css') }}" type="text/css"/>
 {% endblock %}
 
