--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -111,7 +111,7 @@
                 }
 
                 if ('403' === data) {
-                    alert('没有操作权限')
+                    alert('没有操作权限');
                 }
             })
         }
