--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -73,7 +73,7 @@
             favourite: cb1 ? 1 : 0,
             comment: cb2 ? 1 : 0
         }).done(function (data) {
-            alert("权限配置成功")
+            alert("权限配置成功");
         })
     }
 </script>
